# FairSoft

./: CMakeLists.txt  Jenkinsfile
.github/workflows/: release.yml
contrib/docker/: Dockerfile  legacy.cmake
legacy/: README.md
